--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,24 @@
-[ExPhys]
-url           = http://www.pi2.uni-stuttgart.de/cms/index.php?article_id=207
-regex         = redaxo_upload_lect/I2/SS14_Blatt_[0-9]*\.pdf
-outDir        = pyExPhys/
-askAuth       = true
-login         = you shall
-pssw          = not pass!
-
 [Ana]
-url           = http://www.iadm.uni-stuttgart.de/LstAnaMPhy/Weidl/ana2-14/
-regex         = blatt_[0-9]*\.pdf
-outDir        = ana/
+url     = http://www.iadm.uni-stuttgart.de/LstAnaMPhy/Weidl/ana2-14/
+regex   = blatt_[0-9]*\.pdf
+outDir  = Ana/
+
+[AnaVideo]
+url     = http://www.iadm.uni-stuttgart.de/LstAnaMPhy/Weidl/VAM12/Vorlesung_frame1.html
+regex   = Video/Analysis2_[0-9]*.mp4
+outDir  = AnaVideo/
+askAuth = true
+
+[AnaTafel]
+url     = http://www.iadm.uni-stuttgart.de/LstAnaMPhy/Weidl/VAM12/Vorlesung_frame1.html
+regex   = TafelBilder/[0-9]*_[0-9]*.jpg
+outDir  = AnaTafel/
+askAuth = true
+
+[ExPhys]
+url     = http://www.pi2.uni-stuttgart.de/cms/index.php?article_id=207
+regex   = redaxo_upload_lect/I2/SS14_Blatt_[0-9]*\.pdf
+outDir  = ExPhys/
+askAuth = true
+login   = you shall
+pssw    = not pass!
