--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,12 @@
+[DSA]
+ilias   = true
+url     = https://ilias3.uni-stuttgart.de/ilias.php?ref_id=614863&cmdClass=ilrepositorygui&cmdNode=l7&baseClass=ilrepositorygui
+regex   = (?<=href=").*?(?="),/goto.php?target=file_[0-9]*? JUST SERPARATE BY COMMA
+outDir  = DSA/
+askAuth = true
+login   = asdf
+pssw    = asdf
+
 [Ana]
 url     = http://www.iadm.uni-stuttgart.de/LstAnaMPhy/Weidl/ana2-14/
 regex   = blatt_[0-9]*\.pdf
