--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,7 @@
 [DSA]
 ilias   = true
 url     = https://ilias3.uni-stuttgart.de/ilias.php?ref_id=614863&cmdClass=ilrepositorygui&cmdNode=l7&baseClass=ilrepositorygui
-regex   = (?<=href=").*?(?="),/goto.php?target=file_[0-9]*? JUST SERPARATE BY COMMA
-outDir  = DSA/
+regex   = https://ilias3.uni-stuttgart.de/ilias.php?ref_id=614868&cmd ,/goto.php?target=file_[0-9]*?
 askAuth = true
 login   = asdf
 pssw    = asdf
