--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,13 @@
 [DSA]
 ilias   = true
 url     = https://ilias3.uni-stuttgart.de/ilias.php?ref_id=614863&cmdClass=ilrepositorygui&cmdNode=l7&baseClass=ilrepositorygui
-regex   = https://ilias3.uni-stuttgart.de/ilias.php?ref_id=614868&cmd ,/goto.php?target=file_[0-9]*?
-askAuth = true
+regex   = (ilias\.php\?ref_id=[0-9]*&amp;cmd=infoScreen&amp;cmdClass=ilrepositorygui&amp;cmdNode=l7&amp;baseClass=ilrepositorygui) ,(goto\.php\?target=file_[0-9]*_download&client_id=Uni_Stuttgart)
+outDir  = DSA/
+askAuth = false
 login   = asdf
-pssw    = asdf
+pssw    = asfd
+
+
 
 [Ana]
 url     = http://www.iadm.uni-stuttgart.de/LstAnaMPhy/Weidl/ana2-14/
